Update Excel upload method ( level2 screen )
2단계화면 수정

--- a/master/website/board/templates/board/b_costeleaccnt.html
+++ b/master/website/board/templates/board/b_costeleaccnt.html
@@ -61,7 +61,7 @@
                             {% for i in rsCosteleaccnt %}
                             <tr>
                                 <td id="pl_cd{{ i.id }}" value="{{ i.pl_cd }}">
-                                    {{ i.pl_cd }}
+                                    {{ i.placcnt_cd }}
                                 </td>
                                 <td>
                                     <input type="text" class="form-control" id="pl_nm{{ i.id }}" value="{{ i.pl_nm }}"/>
