--- a/master/website/board/templates/board2/cc_manucost_if.html
+++ b/master/website/board/templates/board2/cc_manucost_if.html
@@ -127,10 +127,10 @@
                                     {{ i.cstctr_nm }}
                                 </td>
                                 <td>
-                                    {{ i.itemaccnt_cd }}
+                                    {{ i.accnt_cd }}
                                 </td>
                                 <td>
-                                    {{ i.itemaccnt_nm }}
+                                    {{ i.accnt_nm }}
                                 </td>
                                 <td>
                                     {{ i.manucost_price }}
@@ -165,7 +165,7 @@
                                     코스트센터코드
                                 </th>
                                 <th>
-                                    품목계정코드
+                                    계정코드
                                 </th>
                             </tr>
                             <tbody>
@@ -181,8 +181,8 @@
                                     {% endfor %}
                                 </td>
                                 <td>
-                                    {% for i in rsItemaccnt %}
-                                    <div>{{ i.id }}.{{ i.itemaccnt_cd }} - {{ i.itemaccnt_nm }}</div>
+                                    {% for i in rsCosteleaccnt %}
+                                    <div>{{ i.id }}.{{ i.accnt_cd }} - {{ i.accnt_nm }}</div>
                                     {% endfor %}
                                 </td>
                             </tr>
