--- a/master/website/board/templates/board3/chart1.html
+++ b/master/website/board/templates/board3/chart1.html
@@ -38,7 +38,15 @@
                                             1.
                                         </header>
                                         <div class="panel-body text-center">
-                                            <canvas height="300" width="450"></canvas>
+                                            <select id="graph_select" onchange="select_graph()">
+                                                <option value="injection">
+                                                    당기 투입
+                                                </option>
+                                                <option value="expense">
+                                                    당기 사용
+                                                </option>
+                                            </select>
+                                            <canvas id="mychart" height="300" width="450"></canvas>
                                         </div>
                                     </section>
                                 </div>
@@ -63,5 +71,319 @@
     </section>
     <!--main content end-->
 </section>
+
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+<script src="{%static 'js/chartjs-custom.js'%}"></script>
+
+<script>
+    function getCookie(name) {
+        let cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            const cookies = document.cookie.split(';');
+            for (let i = 0; i < cookies.length; i++) {
+                const cookie = cookies[i].trim();
+                // Does this cookie string begin with the name we want?
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+
+    var csrftoken = getCookie('csrftoken');
+    var xhr;
+
+    var months=['1월', '2월', '3월', '4월', '5월', '6월', '7월', '8월', '9월', '10월', '11월', '12월'];
+    var mater_cost=[120, 56, 56, 100, 110, 50, 110, 50, 60, 110, 86, 79];
+    var labor_cost=[115, 55, 55, 95, 105, 50, 105, 50, 55, 105, 88, 81];
+    var out_pro_cost=[90, 40, 40, 70, 80, 50, 80, 50, 55, 80, 90, 83];
+    var manu_cost=[95, 42, 42, 75, 85, 50, 85, 50, 55, 85, 81, 84];
+    var sales_cost=[480, 400, 385, 420, 500, 530, 400, 450, 430, 430, 440, 460];
+
+    var ctx = document.getElementById('mychart').getContext('2d');
+
+    var chart = new Chart(ctx, {
+        type: 'bar',
+        data: {
+            labels: months,
+            datasets: [{
+                label: '매출액',
+                type: 'line',
+                yAxisID: 'sales_line',
+                fill: false,
+                lineTension: 0,
+                pointRadius: 1,
+                backgroundColor: '#FFCC00',
+                borderColor: '#FFCC00',
+                borderWidth: 3,
+                data: sales_cost
+            }, {
+                label: '고정비',
+                type: 'bar',
+                yAxisID: 'cost_bar',
+                backgroundColor: '#FF3333',
+                borderColor: '#FF3333',
+                data: manu_cost,
+                borderWidth: 3,
+                hoverBorderWidth: 6
+            }, {
+                label: '변동비',
+                type: 'bar',
+                yAxisID: 'cost_bar',
+                backgroundColor: '#FFAAAA',
+                borderColor: '#FFAAAA',
+                data: manu_cost,
+                borderWidth: 3,
+                hoverBorderWidth: 6
+            }]
+        },
+
+        // Configuration options
+        options: {
+            responsive: false,
+            legend: {
+                labels: {
+                    fontColor: '#000000' // label color
+                }
+            },
+            scales: {
+                // y축
+                yAxes: [
+                    {
+                        id: 'sales_line',
+                        name: 'A',
+                        type: 'linear',
+                        position: 'left',
+                        scalePositionLeft: true,
+                        stacked: true,
+                        ticks: {
+                            fontColor: '#000000'
+                        }
+                    }, {
+                        id: 'cost_bar',
+                        name: 'B',
+                        type: 'linear',
+                        position: 'right',
+                        scalePositionLeft: true,
+                        stacked: true,
+                        ticks: {
+                            fontColor: '#000000'
+                        }
+                    }],
+                xAxes: [
+                    {
+                        id: 'x1',
+                        stacked: true,
+                        ticks: {
+                            fontColor: '#000000'
+                        }
+                    },
+                    {
+                        id: 'x2',
+                        stacked: true,
+                        ticks: {
+                            fontColor: '#000000'
+                        }
+                    }
+                ]
+            }
+        }
+    });
+
+    function select_graph() {
+        var selectbox = document.getElementById('graph_select');
+        var graph_type = selectbox.options[selectbox.selectedIndex].value;
+
+        if (graph_type == 'injection') {
+            var chart1 = new Chart(ctx, {
+                type: 'bar',
+                data: {
+                    labels: months,
+                    datasets: [{
+                        label: '매출액',
+                        type: 'line',
+                        yAxisID: 'sales_line',
+                        fill: false,
+                        lineTension: 0,
+                        pointRadius: 1,
+                        backgroundColor: '#FFCC00',
+                        borderColor: '#FFCC00',
+                        borderWidth: 3,
+                        data: sales_cost
+                    }, {
+                        label: '고정비',
+                        type: 'bar',
+                        yAxisID: 'cost_bar',
+                        backgroundColor: '#FF3333',
+                        borderColor: '#FF3333',
+                        data: manu_cost,
+                        borderWidth: 3,
+                        hoverBorderWidth: 6
+                    }, {
+                        label: '변동비',
+                        type: 'bar',
+                        yAxisID: 'cost_bar',
+                        backgroundColor: '#FFAAAA',
+                        borderColor: '#FFAAAA',
+                        data: manu_cost,
+                        borderWidth: 3,
+                        hoverBorderWidth: 6
+                    }]
+                },
+
+                // Configuration options
+                options: {
+                    responsive: false,
+                    legend: {
+                        labels: {
+                            fontColor: '#000000' // label color
+                        }
+                    },
+                    scales: {
+                        // y축
+                        yAxes: [
+                            {
+                                id: 'sales_line',
+                                name: 'A',
+                                type: 'linear',
+                                position: 'left',
+                                scalePositionLeft: true,
+                                stacked: true,
+                                ticks: {
+                                    fontColor: '#000000'
+                                }
+                            }, {
+                                id: 'cost_bar',
+                                name: 'B',
+                                type: 'linear',
+                                position: 'right',
+                                scalePositionLeft: true,
+                                stacked: true,
+                                ticks: {
+                                    fontColor: '#000000'
+                                }
+                            }],
+                        xAxes: [
+                            {
+                                id: 'x1',
+                                stacked: true,
+                                ticks: {
+                                    fontColor: '#000000'
+                                }
+                            },
+                            {
+                                id: 'x2',
+                                stacked: true,
+                                ticks: {
+                                    fontColor: '#000000'
+                                }
+                            }
+                        ]
+                    }
+                }
+            });
+        } else if (graph_type == 'expense') {
+            var chart1 = new Chart(ctx, {
+                type: 'bar',
+                data: {
+                    labels: months,
+                    datasets: [{
+                        label: '매출액',
+                        type: 'line',
+                        yAxisID: 'sales_line',
+                        fill: false,
+                        lineTension: 0,
+                        pointRadius: 1,
+                        backgroundColor: '#FFCC00',
+                        borderColor: '#FFCC00',
+                        borderWidth: 3,
+                        data: sales_cost
+                    }, {
+                        label: '재료비',
+                        type: 'bar',
+                        yAxisID: 'cost_bar',
+                        backgroundColor: '#3399FF',
+                        borderColor: '#3399FF',
+                        data: manu_cost,
+                        borderWidth: 3,
+                        hoverBorderWidth: 6
+                    }, {
+                        label: '노무비',
+                        type: 'bar',
+                        yAxisID: 'cost_bar',
+                        backgroundColor: '#88BBFF',
+                        borderColor: '#88BBFF',
+                        data: manu_cost,
+                        borderWidth: 3,
+                        hoverBorderWidth: 6
+                    }, {
+                        label: '경비',
+                        type: 'bar',
+                        yAxisID: 'cost_bar',
+                        backgroundColor: '#BBEEFF',
+                        borderColor: '#BBEEFF',
+                        data: manu_cost,
+                        borderWidth: 3,
+                        hoverBorderWidth: 6
+                    }]
+                },
+
+                // Configuration options
+                options: {
+                    responsive: false,
+                    legend: {
+                        labels: {
+                            fontColor: '#000000' // label color
+                        }
+                    },
+                    scales: {
+                        // y축
+                        yAxes: [
+                            {
+                                id: 'sales_line',
+                                name: 'A',
+                                type: 'linear',
+                                position: 'left',
+                                scalePositionLeft: true,
+                                stacked: true,
+                                ticks: {
+                                    fontColor: '#000000'
+                                }
+                            }, {
+                                id: 'cost_bar',
+                                name: 'B',
+                                type: 'linear',
+                                position: 'right',
+                                scalePositionLeft: true,
+                                stacked: true,
+                                ticks: {
+                                    fontColor: '#000000'
+                                }
+                            }],
+                        xAxes: [
+                            {
+                                id: 'x1',
+                                stacked: true,
+                                ticks: {
+                                    fontColor: '#000000'
+                                }
+                            },
+                            {
+                                id: 'x2',
+                                stacked: true,
+                                ticks: {
+                                    fontColor: '#000000'
+                                }
+                            }
+                        ]
+                    }
+                }
+            });
+        }
+    }
+</script>
 
 {% endblock %}
