--- a/master/website/board/templates/board2/cc_manucost_if.html
+++ b/master/website/board/templates/board2/cc_manucost_if.html
@@ -115,10 +115,10 @@
                                     {{ i.co_nm }}
                                 </td>
                                 <td>
-                                    {{ i.manucost_ym }}
+                                    {{ i.periodym_cd }}
                                 </td>
                                 <td>
-
+                                    {{ i.version_cd }}
                                 </td>
                                 <td>
                                     {{ i.cstctr_cd }}
