--- a/master/website/board/templates/board2/cc_itempermanucost_if.html
+++ b/master/website/board/templates/board2/cc_itempermanucost_if.html
@@ -117,13 +117,13 @@
                                     {{ i.ipmc_ym }}
                                 </td>
                                 <td>
-                                    {{ i.ipmc_version }}
+                                    {{ i.version_cd }}
                                 </td>
                                 <td>
-
+                                    {{ i.bom_cd }}
                                 </td>
                                 <td>
-
+                                    {{ i.item_nm }}
                                 </td>
                                 <td>
                                     {{ i.accnt_cd }}
@@ -133,9 +133,6 @@
                                 </td>
                                 <td>
                                     {{ i.ipmc_price }}
-                                </td>
-                                <td>
-
                                 </td>
                             </tr>
                             </tbody>
@@ -163,6 +160,9 @@
                                 <th>
                                     계정코드
                                 </th>
+                                <th>
+                                    BOM코드
+                                </th>
                             </tr>
                             <tbody>
                             <tr>
@@ -174,6 +174,11 @@
                                 <td>
                                     {% for i in rsCosteleaccnt %}
                                     <div>{{ i.id }}.{{ i.accnt_cd }} - {{ i.accnt_nm }}</div>
+                                    {% endfor %}
+                                </td>
+                                <td>
+                                    {% for i in rsBom %}
+                                    <div>{{ i.id }}.{{ i.item_cd }}</div>
                                     {% endfor %}
                                 </td>
                             </tr>
