--- a/master/website/board/templates/board2/cc_productcostpayment_if.html
+++ b/master/website/board/templates/board2/cc_productcostpayment_if.html
@@ -95,8 +95,11 @@
                             <tr>
                                 <th rowspan="3">공장코드</th>
                                 <th rowspan="3">공장명</th>
+                                <th rowspan="3">완제품코드</th>
+                                <th rowspan="3">완제품명</th>
                                 <th rowspan="3">계정코드</th>
                                 <th rowspan="3">계정명</th>
+                                <th rowspan="3">version</th>
                                 <td rowspan="2" colspan="2" align="center">기초재고</td>
                                 <td rowspan="2" colspan="2" align="center">생산입고</td>
                                 <td colspan="6" align="center">당기출고</td>
@@ -132,10 +135,19 @@
                                     {{ i.factory_nm }}
                                 </td>
                                 <td>
+                                    {{ i.bom_cd }}
+                                </td>
+                                <td>
+                                    {{ i.item_nm }}
+                                </td>
+                                <td>
                                     {{ i.accnt_cd }}
                                 </td>
                                 <td>
                                     {{ i.accnt_nm }}
+                                </td>
+                                <td>
+                                    {{ i.version_cd }}
                                 </td>
                                 <td>
                                     {{ i.basisicstoc_amt }}
@@ -199,6 +211,9 @@
                                 <th>
                                     계정코드
                                 </th>
+                                <th>
+                                    완제품코드
+                                </th>
                             </tr>
                             <tbody>
                             <tr>
@@ -213,6 +228,13 @@
                                     {% for i in rsCosteleaccnt %}
                                     <div>
                                         {{ i.id }}.{{ i.accnt_cd }} - {{ i.accnt_nm }}
+                                    </div>
+                                    {% endfor %}
+                                </td>
+                                <td>
+                                    {% for i in rsBom %}
+                                    <div>
+                                        {{ i.id }}.{{ i.item_cd }}
                                     </div>
                                     {% endfor %}
                                 </td>
