--- a/master/website/board/templates/board2/cc_materialcost_if.html
+++ b/master/website/board/templates/board2/cc_materialcost_if.html
@@ -3,7 +3,7 @@
 
 {% block scripts %}
 {{ block.super }}
-    <script>
+<script>
       // https://docs.djangoproject.com/en/3.1/ref/csrf/
     function getCookie(name) {
         let cookieValue = null;
@@ -127,7 +127,7 @@
                                     {{ i.version_cd }}
                                 </td>
                                 <td>
-                                    {{ i.factory_cd }}
+                                    {{ i.f_cd }}
                                 </td>
                                 <td>
                                     {{ i.factory_nm }}
@@ -174,65 +174,76 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-lg-12">
-                <section class="panel">
-                    <header class="panel-heading">*code information</header>
-                    <div class="table-responsive">
-                        <table class="table">
-                            <thead>
-                            <tr>
-                                <th>
-                                    법인코드
-                                </th>
-                                <th>
-                                    공장코드
-                                </th>
-                                <th>
-                                    사업장코드
-                                </th>
-                                <th>
-                                    계정코드
-                                </th>
-                                <th>
-                                    BOM코드
-                                </th>
-                            </tr>
-                            <tbody>
-                            <tr>
-                                <td>
-                                    {% for i in rsCo %}
-                                    <div>{{ i.id }}.{{ i.co_cd }} - {{ i.co_nm }}</div>
-                                    {% endfor %}
-                                </td>
-                                <td>
-                                    {% for i in rsFactory %}
-                                    <div>{{ i.id }}.{{ i.factory_cd }} - {{ i.factory_nm }}</div>
-                                    {% endfor %}
-                                </td>
-                                <td>
-                                    {% for i in rsWrkctr %}
-                                    <div>{{ i.id }}.{{ i.workcenter_cd }} - {{ i.workcenter_nm }}</div>
-                                    {% endfor %}
-                                </td>
-                                <td>
-                                    {% for i in rsCosteleaccnt %}
-                                    <div>{{ i.id }}.{{ i.accnt_cd }} - {{ i.accnt_nm }}</div>
-                                    {% endfor %}
-                                </td>
-                                <td>
-                                    {% for i in rsBom %}
-                                    <div>{{ i.id }}.{{ i.item_cd }}</div>
-                                    {% endfor %}
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
-
-                </section>
+        <div class="panel panel-default">
+            <div class="panel-heading" role="tab">
+                <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse1" aria-expanded="false">
+                    *Code Information
+                </a>
+            </div>
+            <div id="collapse1" class="panel-collapse collapse" role="tabpanel">
+                <div class="panel-body">
+                    <table class="table">
+                        <thead>
+                        <tr>
+                            <th>
+                                법인코드
+                            </th>
+                            <th>
+                                version코드
+                            </th>
+                            <th>
+                                공장코드
+                            </th>
+                            <th>
+                                사업장코드
+                            </th>
+                            <th>
+                                계정코드
+                            </th>
+                            <th>
+                                BOM코드
+                            </th>
+                        </tr>
+                        <tbody>
+                        <tr>
+                            <td>
+                                {% for i in rsCo %}
+                                <div>{{ i.id }}. {{ i.co_cd }} - {{ i.co_nm }}</div>
+                                {% endfor %}
+                            </td>
+                            <td>
+                                {% for i in rsVersion %}
+                                <div>{{ i.id }}. {{ i.version_cd }}</div>
+                                {% endfor %}
+                            </td>
+                            <td>
+                                {% for i in rsFactory %}
+                                <div>{{ i.id }}. {{ i.factory_cd }} - {{ i.factory_nm }}</div>
+                                {% endfor %}
+                            </td>
+                            <td>
+                                {% for i in rsWrkctr %}
+                                <div>{{ i.id }}. {{ i.workcenter_cd }} - {{ i.workcenter_nm }}</div>
+                                {% endfor %}
+                            </td>
+                            <td>
+                                {% for i in rsCosteleaccnt %}
+                                <div>{{ i.id }}. {{ i.accnt_cd }} - {{ i.accnt_nm }}</div>
+                                {% endfor %}
+                            </td>
+                            <td>
+                                {% for i in rsBom %}
+                                <div>{{ i.id }}. {{ i.item_cd }}</div>
+                                {% endfor %}
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
+
+
 
     </section>
     <!--main content end-->
